fix tooltip over dropdown over modal-container z-index

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -111,7 +111,7 @@
 
 .tooltip {
     opacity: 1 !important;
-    z-index: 1045;
+    // z-index: 1045;
     &.word-break {
         word-break: normal;
     }
